# one-way-door

./: .env.example  .gitignore  README.md  pyproject.toml
data/: gold.json  seed_examples.json  taxonomy.json
src/one_way_door/: __init__.py  _probe_worker.py  _train_worker.py  cli.py  config.py  control.py  data.py  figures.py  generate.py  judge.py  metrics.py  model.py  pipeline.py  probe.py  sft.py  smoke.py  stats.py  taxonomy.py
tests/: test_control.py  test_data.py  test_generate.py  test_judge.py  test_metrics.py  test_stats.py  test_taxonomy.py
