[project]
name = "one-way-door"
version = "0.1.0"
description = "Teaching why beats teaching what, in miniature: does fine-tuning on reversibility reasoning generalize the one-way-door principle to unseen domains?"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    # --- GTX 1070 is Pascal (sm_61): the cu124 wheel still ships sm_60 kernels
    # that run on the card; cu128/cu130 dropped Pascal. Do not bump torch. ---
    "torch==2.6.0",
    # transformers 5.12.1 ships the Qwen3.5 model class; older lines lack it.
    "transformers==5.12.1",
    "accelerate",
    "peft",
    "trl",
    "datasets",
    # 4-bit NF4 is required here (not optional): the 4B headline model only fits
    # an 8GB card via QLoRA. bitsandbytes on Pascal is best-effort but works.
    "bitsandbytes",
    "anthropic>=0.40",
    "scikit-learn",
    "numpy",
    "pandas",
    "pyarrow",
    "matplotlib",
    "python-dotenv",
]

[project.optional-dependencies]
# Cross-family judge (`one-way-door crossjudge`): re-scores the cached
# generations with an OpenAI judge to rule out same-family judge quirks.
crossjudge = ["openai>=1.60"]

[project.scripts]
one-way-door = "one_way_door.cli:main"

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.6"]

[tool.uv.sources]
torch = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/one_way_door"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "D", "W"]
ignore = ["D203", "D213"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "gpu: requires a CUDA GPU and model weights (deselect with -m 'not gpu')",
    "api: requires ANTHROPIC_API_KEY and network (deselect with -m 'not api')",
]
